--- a/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
@@ -40,18 +40,46 @@
                                 <p class="control-label">Trainers</p>
                                 <span asp-validation-for="TrainingOrder.trainers" class="text-danger"></span>
                             </div>
-                            <div class="selectors">
-                                <a class="btn btnWhite" id="indiButton">Individual</a>
-                                <a class="btn btnWhite" id="groupButton">Groups</a>
+                            <div class="selections">
+                                <ul id="trainerList">
+                                    @foreach (string trainerName in Model.TrainingOrder.trainers) {
+                                        <li>@trainerName</li>
+                                    }
+                                </ul>
                             </div>
+                            <div class="selectors">
+                                <div class="selector">
+                                    <div class="btn btnWhite" id="indiButton"><p>Individual</p></div>
+                                    <div class="form-drop" id="individual">
+                                        <ul id="indiList">
+                                            <li>Aadam</li>
+                                            <li>Alex</li>
+                                            <li>Bob</li>
+                                            <li>Carter</li>
+                                            <!--foreach (Models.Trainer trainer in Model.Trainers) {
+                                                foreach (Models.Employee employee in Model.Employees) {
+                                                    if (trainer.EmployeeID == employee.EmployeeID) {
+                                                        <li>employee.FirstName employee.LastName</li>
+                                                    }
+                                                }
+                                            }-->
 
-                            <select id="individual" style="display: none" asp-for="TrainingOrder.trainers" class="form-drop2">
-                                <option value="Aadam">Aadam</option>
-                            </select>
-                            <select id="groups" style="display: none" asp-for="TrainingOrder.trainers" class="form-drop2">
-                                <option value="HR">HR</option>
-                            </select>
-
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="selector">
+                                    <div class="btn btnWhite" id="groupButton"><p>Groups</p></div>
+                                    <div class="form-drop" id="groups">
+                                        <ul id="groupList">
+                                            <li>HR</li>
+                                            <li>Shipping</li>
+                                            <li>Sales</li>
+                                            <li>Engineering</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <input asp-for="TrainingOrder.trainers" type="hidden" />
                         </div>
 
                         <div class="form-group">
@@ -83,25 +111,66 @@
 </div>
 
 <script>
-
     var indiButton = document.getElementById("indiButton");
     var groupButton = document.getElementById("groupButton");
-
     var individual = document.getElementById("individual");
     var groups = document.getElementById("groups");
+    var trainList = document.getElementById("trainerList");
+    var indiList = document.getElementById("indiList");
+    var groupList = document.getElementById("groupList");
 
     indiButton.addEventListener("click", function () {
+        if (individual.style.display == "flex") {
+            individual.style.display = "none";
+        } else {
+            individual.style.display = "flex";
+        }
         groups.style.display = "none";
-        groups.selectedIndex = -1;
-        individual.style.display = "block";
+
     });
 
     groupButton.addEventListener("click", function () {
-        groups.style.display = "block";
+        if (groups.style.display == "flex") {
+            groups.style.display = "none";
+        } else {
+            groups.style.display = "flex";
+        }
         individual.style.display = "none";
-        individual.selectedIndex = -1;
     });
 
+    trainList.addEventListener("click", function (event) {
+        if (event.target.tagName === "LI") {
+            event.target.remove();
+        }
+    });
+
+    indiList.addEventListener("click", function (event) {
+        if (event.target.tagName === "LI") {
+            trainer1(event.target.textContent);
+        }
+    });
+
+    groupList.addEventListener("click", function (event) {
+        if (event.target.tagName === "LI") {
+            trainer2(event.target.textContent);
+        }
+    });
+
+    function trainer1(name) {
+        if (!trainList.innerHTML.includes(name)) {
+            trainList.innerHTML += "<li>" + name + "</li>";
+        }
+        groups.selectedIndex = -1;
+        individual.selectedIndex = -1;
+    }
+
+    function trainer2(name) {
+        if (!trainList.innerHTML.includes(name)) {
+            trainList.innerHTML += "<li>" + name + "</li>";
+        }
+        individual.selectedIndex = -1;
+        groups.selectedIndex = -1;
+    }
 </script>
 
 @section Scripts {
