--- a/WCSTrainer/Pages/TrainingOrders/Create.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Create.cshtml
@@ -50,7 +50,7 @@
                                 <p class="control-label">Location*</p>
                                 <span asp-validation-for="TrainingOrder.location" class="text-danger"></span>
                             </div>
-                            <select asp-for="TrainingOrder.location" class="form-drop">
+                            <select asp-for="TrainingOrder.location" class="form-drop2">
                                 <option value="1">One</option>
                                 <option value="2">Two</option>
                                 <option value="3">Three</option>
