--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -98,7 +98,7 @@ body {
         .panel .body .side-bar {
             display: flex;
             flex-direction: column;
-            width: 25%;
+            width: 20%;
             background-color: var(--gray2);
         }
 
@@ -131,11 +131,11 @@ body {
             }
 
         .panel .body .properties {
-            padding: 50px;
-            width: 100%;
+            padding: 40px;
             background-color: var(--gray3);
             display: flex;
             flex-direction: row;
+            width: 80%;
         }
 
             .panel .body .properties .user-form {
@@ -157,7 +157,7 @@ body {
                     display: flex;
                     flex-direction: column;
                     margin-top: 40px;
-                    width: 450px;
+                    width: 100%;
                 }
                 .panel .body .properties .user-form .btn {
                     margin-top: 10px;
@@ -172,6 +172,7 @@ body {
                 .panel .body .properties .user-form .field-container .form-group {
                     display: flex;
                     flex-direction: column;
+                    width: 40%;
                 }
 
                     .panel .body .properties .user-form .field-container .form-group .labels {
@@ -264,17 +265,31 @@ body {
 
                 .panel .body .properties .user-form .field-container .text-group {
                     display: flex;
+                    flex-direction: row;
                     padding: 3px 0;
+                    width: 75%;
+                    border-bottom: 1px solid gray;
                 }
-                .panel .body .properties .user-form .text-group .title {
-                    font-size: 20px;
-                    color: #a0a2a8;
-                    margin: 0;
-                }
-                .panel .body .properties .user-form .text-group .info {
-                    margin-left: 10px;
-                    font-size: 20px;
-                }
+                    .panel .body .properties .user-form .field-container .text-group .identifier {
+                        height: 100%;
+                        width: 30%;
+                    }
+                    .panel .body .properties .user-form .field-container .text-group .info-content {
+                        height: 100%;
+                        display: flex;
+                        align-items: flex-start;
+                        width: 70%;
+                    }
+
+                    .panel .body .properties .user-form .field-container .text-group .title {
+                        font-size: 20px;
+                        color: #a0a2a8;
+                        margin: 0;
+                    }
+                    .panel .body .properties .user-form .field-container .text-group .info {
+                        margin-left: 10px;
+                        font-size: 20px;
+                    }
 
             .panel .body .properties .tools {
                 margin-left: 30px;
