--- a/WCSTrainer/Pages/Employees/Details.cshtml
+++ b/WCSTrainer/Pages/Employees/Details.cshtml
@@ -44,6 +44,6 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Employee.EmployeeID">Edit</a> |
+    <a asp-page="./Edit" asp-route-id="@Model.Employee.Id">Edit</a> |
     <a asp-page="./Index">Back to List</a>
 </div>
