--- a/WCSTrainer/Pages/Employees/Index.cshtml
+++ b/WCSTrainer/Pages/Employees/Index.cshtml
@@ -50,9 +50,9 @@
                 @Html.DisplayFor(modelItem => item.Availability)
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.EmployeeID">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.EmployeeID">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.EmployeeID">Delete</a>
+                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
