--- a/WCSTrainer/Pages/Employees/Delete.cshtml
+++ b/WCSTrainer/Pages/Employees/Delete.cshtml
@@ -45,7 +45,7 @@
     </dl>
     
     <form method="post">
-        <input type="hidden" asp-for="Employee.EmployeeID" />
+        <input type="hidden" asp-for="Employee.Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-page="./Index">Back to List</a>
     </form>
