--- a/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
@@ -52,18 +52,11 @@
                                     <div class="btn btnWhite" id="indiButton"><p>Individual</p></div>
                                     <div class="form-drop" id="individual">
                                         <ul id="indiList">
-                                            <li>Aadam</li>
-                                            <li>Alex</li>
-                                            <li>Bob</li>
-                                            <li>Carter</li>
-                                            <!--foreach (Models.Trainer trainer in Model.Trainers) {
-                                                foreach (Models.Employee employee in Model.Employees) {
-                                                    if (trainer.EmployeeID == employee.EmployeeID) {
-                                                        <li>employee.FirstName employee.LastName</li>
-                                                    }
+                                            @foreach (Models.Employee employee in Model.Employees) {
+                                                if (employee.Status.Equals("Trainer")) {
+                                                    <li>@employee.FirstName @employee.LastName</li>
                                                 }
-                                            }-->
-
+                                            }
                                         </ul>
                                     </div>
                                 </div>
@@ -79,7 +72,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <input asp-for="TrainingOrder.trainers" type="hidden" />
+                            <input id="trainersInput" asp-for="TrainingOrder.trainers" type="hidden" />
                         </div>
 
                         <div class="form-group">
@@ -118,6 +111,8 @@
     var trainList = document.getElementById("trainerList");
     var indiList = document.getElementById("indiList");
     var groupList = document.getElementById("groupList");
+    var trainersInput = document.getElementById("trainersInput");
+    var testList = document.getElementById("testList");
 
     indiButton.addEventListener("click", function () {
         if (individual.style.display == "flex") {
@@ -159,6 +154,8 @@
     function trainer1(name) {
         if (!trainList.innerHTML.includes(name)) {
             trainList.innerHTML += "<li>" + name + "</li>";
+            updateTrainersInput();
+            testList.textContent = "g";
         }
         groups.selectedIndex = -1;
         individual.selectedIndex = -1;
@@ -167,9 +164,17 @@
     function trainer2(name) {
         if (!trainList.innerHTML.includes(name)) {
             trainList.innerHTML += "<li>" + name + "</li>";
+            updateTrainersInput();
         }
         individual.selectedIndex = -1;
         groups.selectedIndex = -1;
+    }
+
+    function updateTrainersInput() {
+        var trainers = Array.from(trainList.getElementsByTagName("li")).map(function (item) {
+            return item.textContent;
+        });
+        trainersInput.value = trainers.join(", ");
     }
 </script>
 
