--- a/WCSTrainer/Pages/TrainingOrders/Create.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Create.cshtml
@@ -51,10 +51,10 @@
                                 <span asp-validation-for="TrainingOrder.location" class="text-danger"></span>
                             </div>
                             <select asp-for="TrainingOrder.location" class="form-drop2">
-                                <option value="1">One</option>
-                                <option value="2">Two</option>
-                                <option value="3">Three</option>
-                                <option value="4">Four</option>
+                                <option value="One">One</option>
+                                <option value="Two">Two</option>
+                                <option value="Three">Three</option>
+                                <option value="Four">Four</option>
                             </select>
                         </div>
                         <div class="form-group">
