--- a/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
@@ -9,9 +9,8 @@
         <div class="side-bar">
             <div class="ul">
                 <a href=""><div class="li">Statistics</div></a>
-                <a asp-page="Index"><div class="selected">Training Orders</div></a>
-                <a href=""><div class="li">Manage Trainers</div></a>
-                <a href=""><div class="li">Manage Trainees</div></a>
+                <a href="TrainingOrders"><div class="selected">Training Orders</div></a>
+                <a href="Employees"><div class="li">Manage Employees</div></a>
                 <a href=""><div class="li">Account Settings</div></a>
             </div>
         </div>
@@ -104,16 +103,16 @@
 </div>
 
 <script>
-    var indiButton = document.getElementById("indiButton");
-    var groupButton = document.getElementById("groupButton");
-    var individual = document.getElementById("individual");
-    var groups = document.getElementById("groups");
-    var trainList = document.getElementById("trainerList");
-    var indiList = document.getElementById("indiList");
-    var groupList = document.getElementById("groupList");
     var trainersInput = document.getElementById("trainersInput");
+    var groupButton = document.getElementById("groupButton");
+    var indiButton = document.getElementById("indiButton");
+    var individual = document.getElementById("individual");
+    var trainList = document.getElementById("trainerList");
+    var groupList = document.getElementById("groupList");
+    var indiList = document.getElementById("indiList");
     var testList = document.getElementById("testList");
-
+    var groups = document.getElementById("groups");
+  
     indiButton.addEventListener("click", function () {
         if (individual.style.display == "flex") {
             individual.style.display = "none";
@@ -121,7 +120,6 @@
             individual.style.display = "flex";
         }
         groups.style.display = "none";
-
     });
 
     groupButton.addEventListener("click", function () {
