--- a/WCSTrainer/Pages/Employees/Details.cshtml
+++ b/WCSTrainer/Pages/Employees/Details.cshtml
@@ -12,35 +12,25 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Employee.FirstName)
-        </dt>
+            @Html.DisplayNameFor(model => model.Employee.FirstName)</dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Employee.FirstName)
-        </dd>
+            @Html.DisplayFor(model => model.Employee.FirstName)</dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Employee.LastName)
-        </dt>
+            @Html.DisplayNameFor(model => model.Employee.LastName)</dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Employee.LastName)
-        </dd>
+            @Html.DisplayFor(model => model.Employee.LastName)</dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Employee.Status)
-        </dt>
+            @Html.DisplayNameFor(model => model.Employee.Status)</dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Employee.Status)
-        </dd>
+            @Html.DisplayFor(model => model.Employee.Status)</dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Employee.Trainings)
-        </dt>
+            @Html.DisplayNameFor(model => model.Employee.Trainings)</dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Employee.Trainings)
-        </dd>
+            @Html.DisplayFor(model => model.Employee.Trainings)</dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Employee.Availability)
-        </dt>
+            @Html.DisplayNameFor(model => model.Employee.Availability)</dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Employee.Availability)
-        </dd>
+            @Html.DisplayFor(model => model.Employee.Availability)</dd>
     </dl>
 </div>
 <div>
